--- a/src/Components/List/List.module.css
+++ b/src/Components/List/List.module.css
@@ -12,7 +12,7 @@
     width:70%;
     margin:20px;
     padding:10px;
-    background-color:red;
+    /* background-color:red; */
 }
 .upperContent{
     display:flex;
