--- a/src/Components/List/List.module.css
+++ b/src/Components/List/List.module.css
@@ -116,6 +116,7 @@
 }
 .lowerbtns2 button{
     padding:10px;
+    margin:20px;
     font-size:1rem;
     box-shadow:0px 6px 5px 0px black;
 }
@@ -164,3 +165,11 @@
     background-color:#111;
     color:#fff;
 }
+
+/* code for mobile devices */
+
+/* @media screen and (max-width:1331px) {
+    .box{
+        width:80%;
+    }
+} */
