--- a/src/Components/List/List.module.css
+++ b/src/Components/List/List.module.css
@@ -669,17 +669,137 @@
 }
 
 @media screen and (max-width:399px) {
+    .heading{
+        font-size:1rem;
+        font-weight:600;
+        color:#000;
+        letter-spacing:1px;
+    }
+    .timing{
+        font-size:0.6rem;
+        
+    }
     .containerupperlist{
         width:300px !important;
-        margin-left:30px !important;
+        margin-left:20px !important;
     }
+    .days{
+        font-size:0.5rem;
+        padding-left:7px;
+      }
+      .months{
+          font-size:0.5rem;
+          padding:4px;
+      }
+      .icons{
+        font-size:10px;
+      }
+      .deletediv svg{
+         padding:3px;
+         margin:0px;
+         font-size:13px;
+      }
     .containermonthly{
-        width:320px !important;
+        width:300px !important;
         height:80px;
-        margin-left:30px !important;
+        margin-left:20px !important;
+    }
+    .datemonthly{
+        margin-left:20px;
+        font-size:0.5rem !important;
+    }
+    .monthspan{
+     font-size:0.7rem;
+    }
+    .discrptionmonthly{
+      margin-top:17px;
+    }
+    .discrptionmonthly span{
+        font-size:0.8rem;
+    }
+    .iconedit svg{
+        font-size:2px !important;
+    }
+    .List_iconedit__vt3fi {
+        padding: 10px;
+        /* font-size: 5px; */
+        font-size: 14px !important;
     }
     .lowerbtns{
         width:78%;
+    }
+    .lowerbtns2 button{
+        padding:7px;
+        margin:20px;
+        font-size:0.8rem;
+    }
+    .upperContent{
+       margin-left:20px;
+    }
+}
+
+@media screen and (max-width:378px) {
+    .heading{
+        font-size:0.8rem !important;
+        font-weight:600;
+        letter-spacing:0px;
+    }
+    .timing{
+        font-size:0.6rem !important;
+    }
+    .containerupperlist{
+        width:270px !important;
+        margin-left:20px !important;
+    }
+    .days{
+        font-size:0.5rem;
+        padding-left:7px;
+      }
+      .months{
+          font-size:0.5rem;
+          padding:4px;
+      }
+      .icons{
+        font-size:10px;
+      }
+      .deletediv svg{
+         padding:2px !important;
+         margin:0px;
+         font-size:13px;
+      }
+    .containermonthly{
+        width:280px !important;
+        height:80px;
+        margin-left:20px !important;
+    }
+    .datemonthly{
+        margin-left:20px;
+        font-size:0.5rem !important;
+    }
+    .monthspan{
+     font-size:0.7rem;
+    }
+    .discrptionmonthly{
+      margin-top:17px;
+    }
+    .discrptionmonthly span{
+        font-size:0.8rem;
+    }
+    .iconedit svg{
+        font-size:2px !important;
+    }
+    .List_iconedit__vt3fi {
+        padding: 10px;
+        /* font-size: 5px; */
+        font-size: 14px !important;
+    }
+    .lowerbtns{
+        width:78%;
+    }
+    .lowerbtns2 button{
+        padding:7px;
+        margin:20px;
+        font-size:0.8rem;
     }
     .upperContent{
        margin-left:20px;
