--- a/src/Components/Main/Main.module.css
+++ b/src/Components/Main/Main.module.css
@@ -1,6 +1,8 @@
+/* css for the main component */
+
 .containermain{
   height:100vh;
-  background-image:url("https://images.pexels.com/photos/3826683/pexels-photo-3826683.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");  
+  background-image:url("https://images.pexels.com/photos/3094211/pexels-photo-3094211.jpeg?auto=compress&cs=tinysrgb&w=600");  
   background-size:cover;
   display:flex;
   align-items:center;
